skeleton app working

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An Angular app using bower and covering every aspect of angular",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon src/server/app.js",
     "test": "mocha tests/*.js"
   },
   "author": "",
