--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "mocha": "^2.0.1",
