--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "angular-node-seed",
-  "version": "0.0.1",
-  "private": false,
-  "repository": "git@github.com:gannimet/angular-node-seed.git",
-  "description": "An Angular app using bower and covering every aspect of angular",
-  "main": "app.js",
-  "scripts": {
-    "start": "nodemon src/server/app.js",
-    "test": "mocha src/server/tests/*.js"
-  },
-  "author": "gannimet <info@colimit.de>",
-  "license": "Do what the fuck you want to public license",
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-less": "^0.12.0",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "mocha": "^2.0.1",
-    "should": "^4.1.0"
-  },
-  "dependencies": {
-    "express": "^4.10.0",
-    "jade": "^1.7.0"
-  }
+	"name": "angular-node-seed",
+	"version": "0.0.1",
+	"private": false,
+	"repository": "git@github.com:gannimet/angular-node-seed.git",
+	"description": "An Angular app using bower and covering every aspect of angular",
+	"main": "src/server/app.js",
+	"scripts": {
+		"prestart": "grunt build",
+		"start": "nodemon src/server/app.js",
+		"test": "mocha src/server/tests/*.js"
+	},
+	"author": "gannimet <info@colimit.de>",
+	"license": "Do what the fuck you want to public license",
+	"devDependencies": {
+		"grunt": "^0.4.5",
+		"grunt-contrib-copy": "^0.7.0",
+		"grunt-contrib-jshint": "^0.10.0",
+		"grunt-contrib-less": "^0.12.0",
+		"grunt-contrib-uglify": "^0.6.0",
+		"grunt-contrib-watch": "^0.6.1",
+		"mocha": "^2.0.1",
+		"should": "^4.1.0"
+	},
+	"dependencies": {
+		"express": "^4.10.0",
+		"jade": "^1.7.0"
+	}
 }
