--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "karma": "^0.12.24",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-jasmine": "^0.1.5",
     "mocha": "^2.0.1",
     "should": "^4.1.0"
   },
