--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "jquery": "~2.1.1",
     "angular": "~1.3.0",
     "alertify": "~0.3.10",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "angular-route": "~1.3.1",
+    "angular-mocks": "~1.3.1"
   }
 }
