--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "bootstrap": "~3.2.0",
     "angular-route": "~1.3.1",
     "angular-mocks": "~1.3.1",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angular-animate": "~1.3.2"
   }
 }
